# buildbpy

./: .env.example  .gitignore  .gitmodules  Dockerfile.bpy-macos-arm64  README.md  bootstrap-linux.sh  bootstrap-osx.sh  bootstrap-windows.ps1  pyproject.toml  requirements.txt  version_info.json
.github/: build_all.yml
.github/workflows/: build-linux-arm64.yml  build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-windows.yml  build_all.yml  build_linux.yml  build_linux_aarch64.yml  build_linux_arm64.yml  build_macos.yml  build_macos_intel.yml  build_stubs.yml  build_windows.yml  generate_stubs.yml  release.yml  update_repository.yml
.github/workflows/build_windows/: action.yml
docs/: index.html
docs/bpy/: index.html
docs/bpygold/: index.html
src/buildbpy/: main.py
src/buildbpy/utils/: dmgextractor.py  make_utils.py
wheel-output/: README.MD
workspace/: build_blender.py  check_latest.py  download_deps.py  generate_package_index.py  make_bpy_wheel.py  make_stubs_wheel.py  make_utils.py  version_info.json
workspace/blender/: build_blender.py  build_blender_macos.sh
workspace/utils/: dmgextractor.py
