[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildbpy"
version = "0.1.0"
description = "A CLI to build Blender as a Python module"
readme = "README.md"
authors = [{name = "Michael Gold"}]
license = {file = "LICENSE"}
dependencies = [
    "typer",
    "requests",
    "python-dotenv",
    "bpystubgen",
    "click",
    "aiohttp==3.8.6",
    "httpx==0.25.2",
    "PyGithub==2.1.1"
]

[project.scripts]
buildbpy = "buildbpy.main:app"